<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_accent_24dp"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_accent_24dp"
        android:title="@string/Info"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_accent_24dp"
        android:title="@string/settings"
        app:showAsAction="collapseActionView"/>
</menu>