<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_accent_24dp"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_trash_accent_24dp"
        app:showAsAction="withText"
        android:title="@string/delete"/>

    <item
        android:id="@+id/action_gif"
        android:icon="@drawable/ic_gif_accent_20dp"
        app:showAsAction="withText"
        android:checkable="true"
        android:checked="false"
        android:title="@string/gif"/>

</menu>